--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Copyright (c) 2023 Andrew Carter, Joey Payne, Katie O'Connor, Brennan Richmond, Ryan Palmer. All rights reserved. -->
 <!doctype html>
 <html>
 <head>
